Add Docker support and CORS configuration for local development